deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: my-otus-app
    labels:
        app: my-otus-app
spec:
    replicas: 2
    selector:
        matchLabels:
            app: my-otus-app
    template:
        metadata:
            labels:
                app: my-otus-app
        spec:
            containers:
            - name: my-otus-app
              image: sinkokri1/otus-app-hw:latest
              ports:
              - containerPort: 8080
              livenessProbe:
                httpGet:
                  path: /health
                  port: 8080
                initialDelaySeconds: 5
                periodSeconds: 5
              readinessProbe:
                httpGet:
                  path: /health
                  port: 8080
                initialDelaySeconds: 5
                periodSeconds: 5
