deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-otus-svc
  labels:
    app: my-otus-app
spec:
  type: ClusterIP
  selector:
    app: my-otus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
